--- a/.settings/org.eclipse.wst.common.component
+++ b/.settings/org.eclipse.wst.common.component
@@ -2,8 +2,8 @@
     <wb-module deploy-name="ServerLi">
         <wb-resource deploy-path="/" source-path="/WebRoot" tag="defaultRootSource"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src"/>
-        <property name="context-root" value="/ServerLi"/>
         <property name="java-output-path" value="/ServerLi/WebRoot/WEB-INF/classes"/>
         <property name="me-merge-utility-modules" value="true"/>
+        <property name="context-root" value="/TaierHGServer"/>
     </wb-module>
 </project-modules>
